--- a/src/extension/printing/pom.xml
+++ b/src/extension/printing/pom.xml
@@ -19,14 +19,17 @@
   <packaging>jar</packaging>
   <name>Printing Module</name>
 
+  <properties>
+   <maven.test.skip>false</maven.test.skip>
+   <!--
+        downgrade parent's 20180813 version or org.mapfish.print.servlet.MapPrinterServlet.getInfo
+        throws java.lang.NoSuchMethodError: org.json.JSONWriter.<init>(Ljava/io/Writer;)V
+   -->
+     <json.version>20080701</json.version>
+    <context.name>${project.artifactId}</context.name>
+  </properties>
+ 
   <dependencies>
-    <dependency>
-    <!--
-    	downgrade parent's 20180813 version or org.mapfish.print.servlet.MapPrinterServlet.getInfo
-    	throws java.lang.NoSuchMethodError: org.json.JSONWriter.<init>(Ljava/io/Writer;)V
-    -->
-      <json.version>20080701</json.version>
-    </dependency>   
     <dependency>
       <groupId>org.geoserver</groupId>
       <artifactId>gs-main</artifactId>
